# graphael

./: .gitignore  Cargo.toml  README.md
_static/: index.html  lib.js  style.css
data/: europe.graph  langs.graph
src/: graph.rs  lib.rs  main.rs  matching.rs  web.rs
src/database/: indexing.rs  mod.rs  serde.rs
src/matching/: automata.rs  mod.rs  results.rs
src/matching/automata/: mod.rs  paths.rs
src/queries/: ast.rs  mod.rs
