[package]

name = "graphael"
version = "0.2.0"
authors = [ "Jeremy Jacobson", "Daniel Yule <yule@cs.dal.ca>" ]

[dependencies]
rustc-serialize = "0.3"
nom = "~1.2.1"
url = "0.5.5"
log = "0.3"
argparse = "0.2"

[dependencies.hyper]
version = "0.7"
default-features = false


[lib]
name = "graphael"

[[bin]]
name = "graphael_shell"
path = "src/main.rs"

[[bin]]
name = "graphael_web"
path = "src/web.rs"
