[package]
name = "graphael"
version = "0.2.2"
authors = [ "Jeremy Jacobson", "Daniel Yule <yule@cs.dal.ca>" ]

[dependencies]
rustc-serialize = "0.3"
nom = "2.1"
url = "1.0"
log = "0.3"
argparse = "0.2"

[dependencies.hyper]
version = "0.10"


[lib]
name = "graphael"

[[bin]]
name = "graphael_shell"
path = "src/main.rs"

[[bin]]
name = "graphael_web"
path = "src/web.rs"
